--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "webgl-lint": "^1.9.2"
   },
   "dependencies": {
     "gl-matrix": "^3.4.3"
